# CS5138

./: .gitmodules  TheHunt.md  syllabus.md
Assignment1/: Assignment1.md  README.md  winnt.h
Assignment2/: Scooby.md  scooby_slim  submission.txt
Assignment4/: disassemble.hex  disassemble.sections.txt
MiniAssignmentExplore/: README.md  binary  submission.txt
MiniAssignmentFlare/docs/: README.md
MiniAssignmentFlare/src/: CMakeLists.txt  flare.cpp
MiniAssignmentHaUCk/: compile_commands.json  output.out
MiniAssignmentHaUCk/calling-convention/: CMakeLists.txt  calling-convention.c
MiniAssignmentHaUCk/docs/: README.md
MiniAssignmentHaUCk/docs/samples/: whereami.txt
MiniAssignmentHaUCk/mystery-src/: CMakeLists.txt  compile_commands.json  mystery.cpp
MiniAssignmentHaUCk/mystery-src/.cache/clangd/index/: mystery.cpp.30C019E50F16ACDD.idx
MiniAssignmentHaUCk/src/: CMakeLists.txt  hauck-mfa.cpp
MiniAssignmentHaUCk/src/.cache/clangd/index/: flare.cpp.519F3FC399B473E4.idx
MiniAssignmentHaUCk/string-send/: CMakeLists.txt  compile_commands.json  string-send.c
MiniAssignmentHaUCk/string-send/.cache/clangd/index/: string-send.c.3E43F4368C78A877.idx
MiniAssignmentSecretSearcher/: README.md  submission_template.txt
MiniAssignmentXFilTra8/: Assignment.md  openfile.d
MiniAssignmentXFilTra8/Documentation/: Install.md
MiniAssignmentXFilTra8/XFilTr8/: XFilTr8.sln
MiniAssignmentXFilTra8/XFilTr8/XFilTr8/: XFilTr8.vcxproj  XFilTr8.vcxproj.filters  XFilTra8.cpp
MiniAssignmentXFilTra8/macOS/: Makefile  XFilTr8.cpp  openfile.d  secret.txt
NetworkLabConfiguration/: LabConfiguration.md
Notes/: DecodeMovsd.md  Links.md  RememberMe.md  TheHunt.md  Week1Notes.md
ebpf/: README.md  annotated-elf.h  configure.kali.sh  connect.bcc  connect.py  exec.bcc  exec.py
examples/FunctionInvocation/: FunctionInvocation.cpp  FunctionInvocation.sln  FunctionInvocation.vcxproj  FunctionInvocation.vcxproj.filters
examples/asm/: Makefile  README.md  hello.asm
examples/asm/c/: Makefile  hello.c
examples/binreader/: CMakeLists.txt  binreader.c
examples/ebpf/: connect.bcc  connect.py
examples/elf/: 0001-DEMO-Log-message-to-demonstrate-DT_NEEDED.patch
examples/endianness/: Makefile  README.md  endian.c
examples/function_call/FunctionInvocationWin32/: FunctionInvocation.annotated  FunctionInvocation.cpp  FunctionInvocation.hex
examples/function_call/FunctionInvocationWin32/32bitCallingConvention/: FunctionInvocation.annotated
examples/function_call/FunctionInvocationWin32/64bitCallingConvention/: FunctionInvocation.annotated
examples/hash/: gnome-tour  gnome-tour2
examples/jump_table/: Makefile  jump.annotated  jump.m4
examples/locals/: CMakeLists.txt  summit.c
examples/loop/: Makefile  loop.annotated  loop.c
examples/mixed_toolchain/: Makefile  README.md  common.h  main.c  sum.annotated  sum.c
examples/pe_files/: winnt.h
examples/registers/: Makefile  README.md  registers.asm  xmm2.asm
examples/return/: Makefile  return.annotated  return.c
examples/shared_data_accesses/: Makefile  README.md  shared.c  shared.h  sharer.c
examples/vtables/: .clang-format  Makefile  table.annotated  table.cpp
examples/vtables-climate/: CMakeLists.txt  README.md  VtablesClimate.hex  climate.cpp
examples/vtables-final/: .final.hex.swp  Makefile  final.annotated  final.cpp
examples/vtables-squirrel/: CMakeLists.txt  VtablesSquirrels.hex  VtablesSquirrels.sections  squirrels.cpp
examples/xmm/: Makefile  README.md
examples/yara/interactive_binary/: elf.yara
go/iface/: Makefile  go.mod  iface.go
go/simple/: Makefile  go.mod  simple.annotated  simple.go
go/v1/: Makefile  calling.go  go.mod
go/v1/annotated/: calling.go
go/v2/: Makefile  callingv2.go  go.mod
go/v2/annotated/: callingv2.go-annotated
helpers/: configure_as_mitm_proxy.sh  unconfigure_as_router.sh
helpers/network/: README.md  configure_as_mitm_proxy.sh  configure_as_router.sh
practice/disassembly/: CMakeLists.txt  call.c  call2.c
practice/disassembly/Objects/: FunctionCall  FunctionCall.elf  FunctionCall.hex  FunctionCall2.elf  FunctionCall2.hex
